[project]
name = "meru"
version = "0.1.0"
authors = [{ name = "dyoshyy", email = "d.yoshhyy@gmail.com" }]
dependencies = [
    "ftfy>=6.3.1,<7",
    "future>=1.0.0,<2",
    "hydra-core>=1.3.2,<2",
    "loguru>=0.7.3,<0.8",
    "nltk>=3.9.1,<4",
    "scikit-learn>=1.6.1,<2",
    "tensorflow-datasets>=4.8.3,<5",
    "torchmetrics>=1.7.1,<2",
    "tqdm>=4.67.1,<5",
    "ujson>=5.10.0,<6",
    "webdataset>=0.2.111,<0.3",
    "tensorboard>=2.18.0,<3",
    "wordsegment>=1.3",
    "torch==2.4.0+cu118; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.4.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "torchvision==0.19.0+cu118; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.19.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "pip>=25.1.1",
    "timm>=1.0.15",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchvision",
]
